src/main/java/com/example/authboard/common/error/ErrorCode.java
package com.example.authboard.common.error;

import lombok.AllArgsConstructor;
import lombok.Getter;
import org.springframework.http.HttpStatus;

@Getter
@AllArgsConstructor
public enum ErrorCode implements ErrorCodeIfs {

    BAD_REQUEST(HttpStatus.BAD_REQUEST.value(), 400, "잘못된 요청"),
    SERVER_ERROR(HttpStatus.INTERNAL_SERVER_ERROR.value(), 500, "서버에러"),
    NULL_POINT(HttpStatus.INTERNAL_SERVER_ERROR.value(), 512, "Null Point"),
    UNAUTHORIZED(HttpStatus.UNAUTHORIZED.value(), 401, "권한이 없습니다.")
    ;

    private final Integer httpStatusCode;

    private final Integer code;

    private final String description;
}
